--- a/main.html
+++ b/main.html
@@ -10,6 +10,15 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div id="card-main">
+		<div id="card-body">
+			<img id="card-img" src="https://i.pinimg.com/564x/0a/98/da/0a98da2d46b9ba0c963e02fa39c22edd.jpg">
+			<h1>Pricing Card</h1>
+			<p>Price: Rs.200</p>
+			<p>Description: Lorem ipsum dolar sit amet, consectetur adipiscing elit.</p>
+			<button type="button">Buy Now</button>
+		</div>
+	</div>
 
 </body>
 
